--- a/models/training-tuning-scripts/root-cause-models/root_cause_bert.ipynb
+++ b/models/training-tuning-scripts/root-cause-models/root_cause_bert.ipynb
@@ -66,7 +66,6 @@
    "source": [
     "import cudf\n",
     "from cudf.core.subword_tokenizer import SubwordTokenizer\n",
-    "from binary_sequence_classifier import BinarySequenceClassifier\n",
     "from os import path;\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import f1_score\n",
@@ -75,8 +74,10 @@
     "import numpy as np\n",
     "import time\n",
     "import torch\n",
+    "import sys\n",
     "\n",
-    "from morpheus.utils.seed import manual_seed"
+    "from morpheus.utils.seed import manual_seed\n",
+    "from common.sequence_classifier import SequenceClassifier"
    ]
   },
   {
@@ -128,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dfnewerror=pd.read_csv(\"../../datasets/training-data/root-cause-unseen-errors.csv\", header=None, names=['label', 'log'])"
@@ -137,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(dflogs, dflogs.label,random_state=random_seed)"
@@ -146,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X_train.reset_index(drop=True,inplace=True)"
@@ -155,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "y_train.reset_index(drop=True,inplace=True)"
@@ -164,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X_test=pd.concat([X_test,dfnewerror])"
@@ -173,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "y_test=pd.concat([y_test,dfnewerror[\"label\"]])"
@@ -182,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X_test.reset_index(drop=True,inplace=True)"
@@ -196,31 +211,15 @@
    },
    "outputs": [],
    "source": [
-    "#X_train.to_csv(\"Rootcause-training-data.csv\",index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X_test.to_csv(\"Rootcause-validation-data.csv\",index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_train.to_json(\"Rootcause-training-data.jsonlines\", orient='records',lines=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "X_test.to_json(\"Rootcause-validation-data.jsonlines\", orient='records',lines=True)"
@@ -228,8 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "y_test.reset_index(drop=True,inplace=True)"
@@ -237,8 +238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dfnewerror=cudf.DataFrame.from_pandas(dfnewerror)"
@@ -246,8 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dflogs=cudf.DataFrame.from_pandas(dflogs)"
@@ -263,24 +268,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
    ],
    "source": [
-    "seq_classifier = BinarySequenceClassifier()\n",
-    "seq_classifier.init_model(\"bert-base-uncased\")"
+    "seq_classifier = SequenceClassifier(\"bert-base-uncased\", hash_file=\"../../../morpheus/data/bert-base-uncased-hash.txt\", num_labels=2)"
    ]
   },
   {
@@ -306,21 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 1/1 [00:09<00:00,  9.12s/it]"
+      "Epoch: 100%|██████████| 1/1 [00:09<00:00,  9.20s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss: 0.5870807089588859\n"
+      "Train loss: 0.4259593893181194\n"
      ]
     },
     {
@@ -333,13 +341,15 @@
    ],
    "source": [
     "manual_seed(random_seed)\n",
-    "seq_classifier.train_model(X_train[\"log\"], y_train,batch_size=128, epochs=1,learning_rate=3.6e-4)"
+    "seq_classifier.train_model(X_train[\"log\"], y_train,batch_size=128, epochs=1, learning_rate=3.6e-4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
@@ -370,16 +380,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.95"
+       "0.9979166666666667"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,20 +409,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/morpheus/lib/python3.10/site-packages/cudf/core/indexed_frame.py:3424: FutureWarning: The append method is deprecated and will be removed in a future version. Use cudf.concat instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "test_preds = seq_classifier.predict(X_test[\"log\"], batch_size=128, threshold=0.5)"
+    "test_preds = seq_classifier.predict(X_test[\"log\"], batch_size=128)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "tests = test_preds[0].to_numpy()\n",
+    "tests = test_preds.to_numpy()\n",
     "true_labels = X_test[\"label\"]"
    ]
   },
@@ -423,16 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9591474245115452"
+       "0.998158379373849"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,74 +484,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[180,  22],\n",
-       "       [  1, 270]])"
+       "array([[201,   1],\n",
+       "       [  0, 271]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "confusion_matrix(true_labels, tests)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testpredseries=(test_preds[0]).to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([  0,   1,   2,   7,   9,  11,  12,  13,  14,  16,  18,  19,  20,\n",
-       "         22,  23,  24,  25,  29,  31,  34,  42,  43,  44,  45,  46,  47,\n",
-       "         49,  50,  51,  52,  53,  55,  56,  57,  58,  59,  61,  62,  63,\n",
-       "         64,  65,  66,  67,  68,  69,  70,  71,  73,  74,  80,  81,  82,\n",
-       "         85,  86,  88,  89,  90,  92,  93,  94,  95,  97,  98,  99, 101,\n",
-       "        103, 104, 105, 106, 107, 109, 110, 112, 113, 114, 115, 117, 119,\n",
-       "        120, 123, 124, 125, 126, 127, 128, 129, 130, 131, 134, 136, 137,\n",
-       "        138, 139, 140, 141, 142, 143, 144, 145, 146, 148, 149, 150, 153,\n",
-       "        154, 155, 156, 159, 160, 161, 162, 163, 164, 165, 166, 170, 171,\n",
-       "        172, 173, 174, 175, 176, 178, 181, 182, 183, 187, 188, 191, 194,\n",
-       "        196, 200, 201, 202, 205, 206, 207, 209, 210, 214, 215, 216, 217,\n",
-       "        218, 221, 222, 223, 224, 226, 227, 228, 229, 231, 234, 235, 236,\n",
-       "        237, 238, 240, 244, 245, 246, 250, 251, 254, 255, 256, 257, 262,\n",
-       "        263, 265, 266, 267, 268, 269, 271, 274, 275, 276, 278, 279, 284,\n",
-       "        285, 287, 289, 290, 291, 292, 293, 294, 295, 296, 297, 299, 300,\n",
-       "        301, 302, 303, 304, 309, 311, 312, 315, 316, 317, 318, 319, 321,\n",
-       "        322, 323, 328, 329, 330, 331, 332, 334, 340, 343, 344, 347, 349,\n",
-       "        350, 351, 352, 353, 354, 355, 356, 357, 358, 361, 363, 365, 367,\n",
-       "        369, 372, 373, 374, 375, 378, 379, 380, 381, 382, 383, 384, 385,\n",
-       "        386, 388, 389, 390, 392, 394, 395, 396, 397, 398, 399, 400, 401,\n",
-       "        402, 404, 406, 407, 408, 409, 410, 411, 412, 414, 415, 416, 418,\n",
-       "        419, 420, 421, 425, 426, 429, 432, 434, 435, 436, 437, 438, 441,\n",
-       "        442, 443, 444, 450, 452, 453]),)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(np.where(testpredseries == 1))"
    ]
   },
   {
@@ -536,17 +514,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "tokenizer = SubwordTokenizer(\"./resources/bert-base-uncased-hash.txt\", do_lower_case=True)"
+    "tokenizer = SubwordTokenizer(\"../../../morpheus/data/bert-base-uncased-hash.txt\", do_lower_case=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tokenizer_output = tokenizer(dflogs[\"log\"][0:3],\n",
@@ -556,16 +538,18 @@
     "                                add_special_tokens=True,\n",
     "                                return_tensors=\"pt\")\n",
     "\n",
-    "sample_model_input = (tokenizer_output[\"input_ids\"], tokenizer_output[\"attention_mask\"])"
+    "sample_model_input = (tokenizer_output[\"input_ids\"].type(torch.long), tokenizer_output[\"attention_mask\"].type(torch.long))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "torch.onnx.export(seq_classifier._model.module,              \n",
+    "torch.onnx.export(seq_classifier._model,              \n",
     "                  sample_model_input,               \n",
     "                  \"model.onnx\",                                      # where to save the model\n",
     "                  export_params=True,                                # store the trained parameter weights inside the model file\n",
@@ -625,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
